--- a/SetURL/popup.html
+++ b/SetURL/popup.html
@@ -54,13 +54,13 @@
     <div class="container">
         <button id="openCaseButton" hidden="true"><i class="fa-brands fa-chrome fa-flip-both fa-2xl"
                 style="color: #74C0FC;"></i></button>
-        <button id="getCaseIDButton" title="GetCaseID"><i
+        <button id="getCaseIDButton" hidden="true" title="GetCaseID"><i
                 class="fa-solid fa-magnifying-glass fa-2xl"></i></button>
         <button id="openZDCaseButton" title="OpenZDCase"><i
                 class="fa-solid fa-up-right-from-square fa-2xl"></i></button>
 
         <button id="create-folder-show-dialog" title="CreateCaseFolder">
-            <i class="fa-solid fa-folder-plus fa-flip-both fa-2xl" style="color: #1a087f;"></i>
+            <i class="fa-solid fa-folder-plus fa-flip-both fa-2xl" style="color: #684ff5;"></i>
         </button>
         <button id="syncFolderButton" title="SyncFolder">
             <i class="fa-solid fa-rotate fa-2xl" style="color: #087f24;"></i>
